--- a/pom.xml
+++ b/pom.xml
@@ -48,5 +48,11 @@
       <artifactId>freemarker</artifactId>
       <version>2.3.32</version>
     </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.7.3</version>
+    </dependency>
+
   </dependencies>
 </project>
