--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: java-sp2-tinder
     env: java
-    buildCommand: ./mvnw clean install
+    buildCommand: ./build.sh
     startCommand: java -jar target/tinder-1.0-SNAPSHOT.jar
     envVars:
       - key: JAVA_HOME
