Set JAVA_HOME directly in build command

--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,5 @@ services:
   - type: web
     name: java-sp2-tinder
     env: java
-    buildCommand: ./build.sh
+    buildCommand: JAVA_HOME=/opt/render/project/.java/current ./mvnw clean install
     startCommand: java -jar target/tinder-1.0-SNAPSHOT.jar
-    envVars:
-      - key: JAVA_HOME
-        value: /opt/render/project/.java/current
